Fixed overlaying elements on search resuls page which overlapped the side bar causing disfunctionality
Changed index.jade to display item[0]'s info 3 times instead of referencing the temporarily unavailable database items

--- a/public/css/shop-searchpage.css
+++ b/public/css/shop-searchpage.css
@@ -97,6 +97,7 @@ body {
     background-color: transparent;
     position: absolute;
     right: 72%;
+    width: 80px;
     top: 25px;
     text-align: right;
 }
